src/prompt/snapshots/thndrs__prompt__tests__snapshot_fragment_web_source_guidance.snap
---
source: src/prompt/mod.rs
expression: web.content
---
## Web and Source Guidance

- Web search and URL extraction tools are available for current information.
  Use them when the workspace does not contain the answer.
- Private-network targets are always rejected. Response sizes are capped.
- Prefer reading local files and searching the workspace before fetching
  external URLs.
- Cite the source URL when you surface information from the web.
