src/prompt/snapshots/thndrs__prompt__tests__snapshot_tool_catalog_json.snap
---
source: src/prompt/mod.rs
expression: json
---
[
  {
    "description": "find_files\n\nLocate files by name or glob under the workspace root.\n\nUse this when you know (or can guess) a file name and need its path. Prefer this over\nlisting all files. Paths are contained to the root; hidden files and symlinks are off\nunless requested. Capped at 100 results; long lines truncate at 512 chars.",
    "input_schema": {
      "properties": {
        "extensions": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "follow_symlinks": {
          "type": "boolean"
        },
        "glob": {
          "description": "Optional additional glob filter.",
          "type": "string"
        },
        "include_hidden": {
          "type": "boolean"
        },
        "max_depth": {
          "type": "integer"
        },
        "pattern": {
          "description": "File name or glob pattern to search for.",
          "type": "string"
        }
      },
      "required": [
        "pattern"
      ],
      "type": "object"
    },
    "name": "find_files"
  },
  {
    "description": "list_searchable_files\n\nEnumerate searchable files under the workspace root.\n\nUse this to get an overview of the project structure. Prefer find_files when you know\na file name, or search_text when you need content matches. Respects ignore rules and\nskips hidden files by default. Capped at 100 results.",
    "input_schema": {
      "properties": {
        "glob": {
          "type": "string"
        },
        "include_hidden": {
          "type": "boolean"
        }
      },
      "type": "object"
    },
    "name": "list_searchable_files"
  },
  {
    "description": "search_text\n\nGrep file contents by regex under the workspace root.\n\nReturns matching lines as file:line:text. Use this when you need to find where a\nsymbol, string, or pattern appears in the codebase. Prefer this over listing files\nwhen you need content. Paths are contained to the root; hidden files are off unless\nrequested. Capped at 100 matches; lines truncate at 512 chars.",
    "input_schema": {
      "properties": {
        "context_lines": {
          "type": "integer"
        },
        "extensions": {
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "glob": {
          "type": "string"
        },
        "include_hidden": {
          "type": "boolean"
        },
        "pattern": {
          "description": "Regex pattern to search for.",
          "type": "string"
        }
      },
      "required": [
        "pattern"
      ],
      "type": "object"
    },
    "name": "search_text"
  },
  {
    "description": "read_file_range\n\nRead a 1-indexed line range from a file under the workspace root.\n\nUse this to inspect file contents after finding a path with find_files or search_text.\nPrefer targeted ranges over reading entire large files. Paths are contained to the root;\nescapes are rejected. Output is capped at 65536 bytes; long lines truncate at 512 chars.",
    "input_schema": {
      "properties": {
        "end_line": {
          "type": "integer"
        },
        "path": {
          "description": "Path relative to the workspace root.",
          "type": "string"
        },
        "start_line": {
          "type": "integer"
        }
      },
      "required": [
        "path",
        "start_line"
      ],
      "type": "object"
    },
    "name": "read_file_range"
  },
  {
    "description": "web_search\n\nSearch the web for current information.\n\nUse this when the workspace does not contain the answer and you need external\ndocumentation, API specs, or current facts. Prefer reading local files and\nsearching the workspace first. With native/exa modes, Umans executes server-side\nsearch; with none, a local DuckDuckGo fallback is used. Capped at 10 results by default.",
    "input_schema": {
      "properties": {
        "max_results": {
          "description": "Maximum number of results to return.",
          "type": "integer"
        },
        "query": {
          "description": "The search query.",
          "type": "string"
        }
      },
      "required": [
        "query"
      ],
      "type": "object"
    },
    "name": "web_search"
  },
  {
    "description": "read_url\n\nFetch a public HTTP/HTTPS URL and extract readable Markdown.\n\nUse this to read a web page found via web_search or referenced in the workspace.\nPrefer reading local files over fetching external URLs when the information is\navailable locally. Private-network targets are rejected; non-http(s) schemes are\nunsupported. Response size is capped and content type is enforced; output may truncate.",
    "input_schema": {
      "properties": {
        "url": {
          "description": "The public HTTP/HTTPS URL to fetch.",
          "type": "string"
        }
      },
      "required": [
        "url"
      ],
      "type": "object"
    },
    "name": "read_url"
  },
  {
    "description": "create_file\n\nCreate a new file with the given content.\n\nUse this when you need to write a new file that does not yet exist. Fails if the\nfile already exists — use this to avoid accidental overwrites. Paths are contained\nto the workspace root; escapes are rejected. Parent directories are created if needed.",
    "input_schema": {
      "properties": {
        "content": {
          "description": "The full file content to write.",
          "type": "string"
        },
        "path": {
          "description": "Path relative to the workspace root.",
          "type": "string"
        }
      },
      "required": [
        "path",
        "content"
      ],
      "type": "object"
    },
    "name": "create_file"
  },
  {
    "description": "replace_range\n\nReplace a unique exact string occurrence in an existing file.\n\nUse this when you need to edit part of a file. Provide the exact old_string to\nfind and the new_string to replace it with. Fails if old_string appears zero or\nmultiple times, ensuring unambiguous edits. Paths are contained to the workspace\nroot; escapes are rejected. Failed edits leave the file unchanged.",
    "input_schema": {
      "properties": {
        "new_string": {
          "description": "The replacement string.",
          "type": "string"
        },
        "old_string": {
          "description": "The exact string to find. Must appear exactly once.",
          "type": "string"
        },
        "path": {
          "description": "Path relative to the workspace root.",
          "type": "string"
        }
      },
      "required": [
        "path",
        "old_string",
        "new_string"
      ],
      "type": "object"
    },
    "name": "replace_range"
  },
  {
    "description": "write_patch\n\nApply a structured patch to create, replace, or edit a file.\n\nUse this as the unified entry point for file writes. Set op to create (new file,\nfails if exists), replace (overwrite full content), or edit (replace a unique exact\nstring). Paths are contained to the workspace root; escapes are rejected. Failed\npatches leave the file unchanged.",
    "input_schema": {
      "properties": {
        "content": {
          "description": "Full file content for create/replace ops.",
          "type": "string"
        },
        "new_string": {
          "description": "The replacement string for edit ops.",
          "type": "string"
        },
        "old_string": {
          "description": "The exact string to find for edit ops.",
          "type": "string"
        },
        "op": {
          "description": "The patch operation.",
          "enum": [
            "create",
            "replace",
            "edit"
          ],
          "type": "string"
        },
        "path": {
          "description": "Path relative to the workspace root.",
          "type": "string"
        }
      },
      "required": [
        "op",
        "path"
      ],
      "type": "object"
    },
    "name": "write_patch"
  },
  {
    "description": "run_shell\n\nRun a shell command in the workspace and capture stdout, stderr, and exit status.\n\nUse this for build, test, format, and inspection commands. Commands run from the\nworkspace root via an argv array — never a shell string, so pipes and redirects\nare unavailable. Prefer narrower built-in tools when they fit. stdout/stderr are\ncapped and line-truncated. Timeouts and cancellation are enforced.",
    "input_schema": {
      "properties": {
        "args": {
          "description": "Argv after the program.",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "background": {
          "description": "If true, run as a long-lived background process.",
          "type": "boolean"
        },
        "cwd": {
          "description": "Optional working directory relative to the workspace root.",
          "type": "string"
        },
        "program": {
          "description": "The program to run (e.g. \"cargo\", \"ls\").",
          "type": "string"
        },
        "timeout_secs": {
          "description": "Timeout in seconds.",
          "type": "integer"
        }
      },
      "required": [
        "program"
      ],
      "type": "object"
    },
    "name": "run_shell"
  }
]
